# SONIC

./: .gitignore  README.md  __init__.py  generateSpectogram.py  main.py  mfcc_embeddings.parquet  musicfm_embeddings.parquet  profile_data.prof  pyproject.toml  requirements.txt  utils.py
CAPAR_MRSim/: __init__.py
CAPAR_MRSim/file_processing/: __init__.py  convert.py  download.py
SONIC/: __init__.py  main.py
SONIC/CREAM/: __init__.py  convert.py  dataset.py  sonic_io.py  sonic_utils.py  spectograms.py  spectrograms.py  split.py
SONIC/ROUGE/: __init__.py  bert4Rec.py  bert4rec.py  bert_train.py  best_params.json  dataset.py  datasets.py  evaluate.py  knn.py  model.py  snn.py  snn_model.py  train.py
SONIC/TAILS/: ViT.py  __init__.py  emae.py  embedder.py  encoder.py  jb.py  lyrical.py  m2v.py  mert.py  mfcc.py  mfm.py  musicfm.py  musicnn.py  vit.py
conversion/: __init__.py  convert.py  spectograms.py  utils.py
