[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
readme = {file = "SONIC/README.md"}  # README is inside the SONIC directory

[tool.setuptools.packages.find]
include = ["SONIC*","CREAM*", "TAILS*"]

[project]
name = "sonic"
version = "0.1.0"
description = "SONIC: Spectrogram-Oriented Network for Intelligent Recommendation"
requires-python = ">=3.12,<3.13"
license = {text = "MIT"}

# Entry point for CLI commands
[project.scripts]
sonic = "SONIC.main:app"
