[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["SONIC*", "CREAM*", "TAILS*"]

[project]
name = "sonic"
version = "0.1.0"
description = "SONIC: Spectrogram-Oriented Network for Intelligent Recommendation"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}

# Static dependencies
dependencies = [
    "opencv-python",
    "numpy",
    "torch",
    "torchaudio",
    "typer",
    "pyarrow",
    "fastparquet",
    "faiss-cpu",
    "rs_metrics",
]

# Entry point for CLI commands
[project.scripts]
sonic = "SONIC.main:app"
